Fix search page's z-index issue.

--- a/src/components/templates/searchTemplate/search-template.scss
+++ b/src/components/templates/searchTemplate/search-template.scss
@@ -16,7 +16,7 @@
 
 .search-template__form {
   position: absolute;
-  z-index: 10;
+  z-index: 5;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
